couchdb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: public.ecr.aws/docker/library/couchdb:3
          ports:
            - containerPort: 5984
          volumeMounts:
            - mountPath: /opt/couchdb/data
              name: couchdb-storage
      volumes:
        - name: couchdb-storage
          persistentVolumeClaim:
            claimName: couchdb-pvc
