couchdb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - couchdb.limtaehyun.dev
      secretName: couchdb-tls
  rules:
    - host: couchdb.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-service
                port:
                  number: 5984
